// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries service when creating a new log entry will create a new log entry with all options 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 1210,
      "hePercent": undefined,
      "material": "fe",
      "name": "ornate parcel",
      "o2Percent": 25.6,
      "pressureUnit": "psi",
      "startPressure": 3470,
      "volume": 12,
      "workingPressure": 3000,
    },
  ],
  "conditions": {
    "airTemperature": 28,
    "bottomTemperature": 24,
    "chop": 2,
    "current": 3,
    "surfaceTemperature": 26,
    "temperatureUnit": "C",
    "visibility": 4.8,
    "weather": "Sunny with some clouds",
  },
  "createdAt": 2024-07-23T11:39:57.073Z,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": 1582583450944,
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "depths": {
    "averageDepth": 45,
    "depthUnit": "ft",
    "maxDepth": 67,
  },
  "equipment": {
    "boots": true,
    "camera": false,
    "exposureSuit": "drysuit",
    "gloves": true,
    "hood": true,
    "scooter": false,
    "torch": false,
    "trimCorrectness": "good",
    "weight": 4.4,
    "weightCorrectness": "over",
    "weightUnit": "kg",
  },
  "id": "3e238287-519a-4a65-bc57-afe0c6cd9ced",
  "logNumber": 123,
  "notes": "Great dive! Saw fish.",
  "operator": undefined,
  "site": undefined,
  "tags": [],
  "timing": {
    "bottomTime": 2880,
    "duration": 3120,
    "entryTime": 1711658700000,
    "surfaceInterval": undefined,
    "timezone": "Europe/Amsterdam",
  },
  "updatedAt": 2024-07-23T14:22:09.372Z,
}
`;

exports[`Log entries service when listing log entries will perform a basic search 1`] = `
[
  {
    "air": [],
    "entryTime": 2025-01-07T05:08:39.483Z,
    "id": "a3ac30e7-fa6d-42f9-aa6e-bd017d68fd5b",
    "site": "well-worn upbeat trillion",
    "timezone": "America/Bahia",
  },
  {
    "air": [],
    "entryTime": 2025-01-05T15:14:32.551Z,
    "id": "abbfc6e4-8c86-49d8-a74a-39e2820bb90c",
    "site": "light drab gym",
    "timezone": "Europe/Istanbul",
  },
  {
    "air": [],
    "entryTime": 2025-01-02T18:40:40.479Z,
    "id": "94e1bf9f-3886-49ab-9c0f-e3f8f510af26",
    "site": "unruly angry suppression",
    "timezone": "America/Nuuk",
  },
  {
    "air": [],
    "entryTime": 2024-12-27T12:10:23.550Z,
    "id": "0ff99a5d-ca17-46e7-8626-54066d815513",
    "site": "specific dead ramen",
    "timezone": "Australia/Eucla",
  },
  {
    "air": [],
    "entryTime": 2024-12-19T14:30:18.312Z,
    "id": "1f7c1d3c-9eb9-4c8e-9f6c-41b1ac2ccb00",
    "site": "grounded lost vendor",
    "timezone": "America/Fortaleza",
  },
  {
    "air": [],
    "entryTime": 2024-12-07T20:20:41.125Z,
    "id": "545adc7a-40bb-46dd-ade4-456d42b3cec5",
    "site": "visible friendly nonconformist",
    "timezone": "Africa/Johannesburg",
  },
  {
    "air": [],
    "entryTime": 2024-12-01T20:42:23.632Z,
    "id": "6b70c8ff-7fd8-4584-9ce0-33c0b2d400d8",
    "site": "concerned specific printing",
    "timezone": "Europe/Monaco",
  },
  {
    "air": [],
    "entryTime": 2024-11-29T23:46:01.845Z,
    "id": "3701a341-01db-4f8d-bf33-cc6dbf159d9a",
    "site": "ideal blond spume",
    "timezone": "Asia/Barnaul",
  },
  {
    "air": [],
    "entryTime": 2024-11-28T12:28:08.877Z,
    "id": "a48d34a0-e5da-443c-a162-104a0f3f22a3",
    "site": "second pleasing berry",
    "timezone": "America/Santiago",
  },
  {
    "air": [],
    "entryTime": 2024-11-27T13:08:20.671Z,
    "id": "1301961d-03d7-4389-a74b-b217c152c4cd",
    "site": "alert awesome intuition",
    "timezone": "Africa/Blantyre",
  },
  {
    "air": [],
    "entryTime": 2024-11-21T18:32:40.014Z,
    "id": "6f631fe9-5b7b-487d-9bf8-baa24b9f4c58",
    "site": "upbeat key cheek",
    "timezone": "Africa/Ceuta",
  },
  {
    "air": [],
    "entryTime": 2024-11-20T11:55:30.009Z,
    "id": "89b41f9c-3a8d-45fd-b31c-e7b45351393b",
    "site": "substantial bruised chinchilla",
    "timezone": "Asia/Baku",
  },
  {
    "air": [],
    "entryTime": 2024-11-18T21:50:53.218Z,
    "id": "2b149735-8052-4827-bb6b-679e9249d5cf",
    "site": "mild mixed crewman",
    "timezone": "Asia/Amman",
  },
  {
    "air": [],
    "entryTime": 2024-11-17T05:14:59.683Z,
    "id": "98323c28-9b12-43f2-adad-64c9c1183f02",
    "site": "jumpy canine antechamber",
    "timezone": "Europe/Vilnius",
  },
  {
    "air": [],
    "entryTime": 2024-11-16T14:55:11.222Z,
    "id": "8694aeee-dcee-4f0d-bb09-b092b492a691",
    "site": "ringed regal temporary",
    "timezone": "America/Porto_Velho",
  },
  {
    "air": [],
    "entryTime": 2024-11-16T05:32:47.115Z,
    "id": "3adbd60c-1784-42fe-af8c-f308067901e6",
    "site": "exotic warmhearted aside",
    "timezone": "America/Cancun",
  },
  {
    "air": [],
    "entryTime": 2024-11-09T23:19:05.960Z,
    "id": "3c1dbe45-33f9-4de6-90f8-e63293459762",
    "site": "shameful glorious noodles",
    "timezone": "Asia/Tashkent",
  },
  {
    "air": [],
    "entryTime": 2024-11-08T20:08:57.380Z,
    "id": "cc2393ee-df6b-4e2d-9fb7-fbf0034ccb9d",
    "site": "neat darling tip",
    "timezone": "Africa/Ouagadougou",
  },
  {
    "air": [],
    "entryTime": 2024-11-04T07:51:05.195Z,
    "id": "5cf6e1a0-e823-4feb-ad1d-813e87ff99c3",
    "site": "nifty idle roof",
    "timezone": "Africa/Bangui",
  },
  {
    "air": [],
    "entryTime": 2024-11-01T06:53:29.398Z,
    "id": "1d2f49f4-fbc6-4033-b285-2d6db8910392",
    "site": "filthy present prestige",
    "timezone": "Asia/Atyrau",
  },
  {
    "air": [],
    "entryTime": 2024-10-22T03:01:10.552Z,
    "id": "134f6caf-208b-4621-beb4-e1157eb24573",
    "site": "friendly mundane respite",
    "timezone": "America/Indiana/Indianapolis",
  },
  {
    "air": [],
    "entryTime": 2024-10-17T06:40:06.040Z,
    "id": "a4e8ef51-86d5-49fa-beaf-af21762e6fc2",
    "site": "untrue sparse comics",
    "timezone": "Pacific/Auckland",
  },
  {
    "air": [],
    "entryTime": 2024-10-17T00:09:52.454Z,
    "id": "0479e56a-cdd3-43ae-99db-2a5cda7567ba",
    "site": "worrisome this expectation",
    "timezone": "Europe/Zagreb",
  },
  {
    "air": [],
    "entryTime": 2024-10-13T14:06:46.020Z,
    "id": "2cfc1d0e-4821-44fc-a6e2-ac8e74c7437c",
    "site": "sympathetic mortified taxicab",
    "timezone": "Europe/Zurich",
  },
  {
    "air": [],
    "entryTime": 2024-10-12T08:55:21.205Z,
    "id": "dfb9c61f-cb0e-4cd4-adc5-2e98a90ccc72",
    "site": "another submissive subconscious",
    "timezone": "America/Panama",
  },
  {
    "air": [],
    "entryTime": 2024-10-08T04:13:10.013Z,
    "id": "6d561b7e-d608-4686-8b99-edc555345acd",
    "site": "definitive tart hierarchy",
    "timezone": "Europe/Bucharest",
  },
  {
    "air": [],
    "entryTime": 2024-10-03T00:59:27.773Z,
    "id": "2cb78cd1-dbac-4ac3-8794-ba83a5f9e558",
    "site": "natural celebrated paint",
    "timezone": "Pacific/Marquesas",
  },
  {
    "air": [],
    "entryTime": 2024-10-01T06:22:04.851Z,
    "id": "d92a2a9f-9519-47f0-a2f7-390b5c355d38",
    "site": "steep aromatic broccoli",
    "timezone": "Asia/Gaza",
  },
  {
    "air": [],
    "entryTime": 2024-09-28T12:15:29.300Z,
    "id": "e30940d2-64e3-46db-a675-8832070d2f35",
    "site": "petty every havoc",
    "timezone": "America/Barbados",
  },
  {
    "air": [],
    "entryTime": 2024-09-28T01:50:50.112Z,
    "id": "223f4d4d-f408-4f0d-b56f-814303a94dc7",
    "site": "frizzy excited outback",
    "timezone": "Atlantic/Faroe",
  },
  {
    "air": [],
    "entryTime": 2024-09-21T17:51:13.370Z,
    "id": "d49e8fea-4f9c-4a04-9467-382ca4843526",
    "site": "complex third sitar",
    "timezone": "Europe/Vienna",
  },
  {
    "air": [],
    "entryTime": 2024-09-18T04:04:54.586Z,
    "id": "5f9a82df-5df4-4b28-8854-7ccd711c3387",
    "site": "unwieldy worn chromolithograph",
    "timezone": "Indian/Mahe",
  },
  {
    "air": [],
    "entryTime": 2024-09-14T16:25:52.396Z,
    "id": "23c26029-4b45-4e75-acb2-da2ff46aab08",
    "site": "aggravating unhappy vest",
    "timezone": "Asia/Bahrain",
  },
  {
    "air": [],
    "entryTime": 2024-09-11T19:34:01.344Z,
    "id": "3300a246-ed0d-4109-8248-ac4a63485c5d",
    "site": "caring nutty grub",
    "timezone": "Europe/Podgorica",
  },
  {
    "air": [],
    "entryTime": 2024-09-09T12:23:13.278Z,
    "id": "f724f111-79e4-4a76-93e4-c3d1aba6f148",
    "site": "frugal monstrous title",
    "timezone": "Africa/Mogadishu",
  },
  {
    "air": [],
    "entryTime": 2024-09-07T07:32:08.908Z,
    "id": "0fad0d34-e3f5-46da-b0ba-7699d538d91b",
    "site": "mortified frilly transition",
    "timezone": "Asia/Pyongyang",
  },
  {
    "air": [],
    "entryTime": 2024-09-06T12:03:17.545Z,
    "id": "2ea07068-397e-483c-a067-e98321e18092",
    "site": "knowledgeable oily sweatshirt",
    "timezone": "America/Belem",
  },
  {
    "air": [],
    "entryTime": 2024-09-04T17:39:13.446Z,
    "id": "8a3ee274-c876-4aa4-9a4c-422c5dee04fc",
    "site": "steel monthly hypothesis",
    "timezone": "Asia/Tokyo",
  },
  {
    "air": [],
    "entryTime": 2024-09-01T19:05:48.759Z,
    "id": "944c0bb4-f554-4ca3-83bf-410284c8ce8c",
    "site": "meaty weird good",
    "timezone": "Europe/Jersey",
  },
  {
    "air": [],
    "entryTime": 2024-08-30T10:19:30.468Z,
    "id": "170f2018-3e63-48db-ba17-70a0128c1954",
    "site": "gentle careless sequence",
    "timezone": "America/Dominica",
  },
  {
    "air": [],
    "entryTime": 2024-08-19T04:52:36.847Z,
    "id": "cb7746ad-37eb-48fe-88f8-c6f6c9a85211",
    "site": "earnest stingy metro",
    "timezone": "Pacific/Chatham",
  },
  {
    "air": [],
    "entryTime": 2024-08-17T08:39:15.035Z,
    "id": "f983cf3b-33e5-46f5-892d-45a730a94751",
    "site": "squeaky scaly sled",
    "timezone": "Indian/Kerguelen",
  },
  {
    "air": [],
    "entryTime": 2024-08-07T05:08:38.185Z,
    "id": "e5af17b3-576c-4247-8c2d-fab00fc76c8c",
    "site": "second pleasing berry",
    "timezone": "America/Cuiaba",
  },
  {
    "air": [],
    "entryTime": 2024-08-05T05:36:22.903Z,
    "id": "0eb84b46-aa52-4084-b1d2-a21ee43767f2",
    "site": "wry boring examiner",
    "timezone": "Asia/Kabul",
  },
  {
    "air": [],
    "entryTime": 2024-08-01T08:38:11.700Z,
    "id": "4456eae2-261d-42cc-9b0a-78e67025e3a6",
    "site": "unsightly kaleidoscopic web",
    "timezone": "Asia/Vientiane",
  },
  {
    "air": [],
    "entryTime": 2024-07-30T12:06:55.747Z,
    "id": "daf9a875-d0fe-4e18-8c10-45c24d299024",
    "site": "uniform strict periodical",
    "timezone": "Africa/Kinshasa",
  },
  {
    "air": [],
    "entryTime": 2024-07-23T03:02:02.156Z,
    "id": "20d50696-8c66-4786-bcbf-0a6c95086557",
    "site": "knotty serpentine shoulder",
    "timezone": "America/St_Kitts",
  },
  {
    "air": [],
    "entryTime": 2024-07-22T20:00:55.413Z,
    "id": "7993e20d-b332-40db-b4e7-ef36cc0e64dc",
    "site": "carefree fussy crewman",
    "timezone": "America/Argentina/San_Juan",
  },
  {
    "air": [],
    "entryTime": 2024-07-09T14:38:01.974Z,
    "id": "e23c00bf-ce93-4f31-b0d8-da93e3ecd28b",
    "site": "shallow drafty position",
    "timezone": "Africa/Douala",
  },
  {
    "air": [],
    "entryTime": 2024-07-07T06:49:01.536Z,
    "id": "ff4ef4b7-d322-4f69-bcdd-542bf77551a9",
    "site": "infamous agile tail",
    "timezone": "America/Campo_Grande",
  },
]
`;

exports[`Log entries service when listing log entries will perform a search for log entries after a start date 1`] = `
{
  "data": [
    {
      "entryTime": 2025-01-07T05:08:39.483Z,
      "id": "a3ac30e7-fa6d-42f9-aa6e-bd017d68fd5b",
      "site": "well-worn upbeat trillion",
    },
    {
      "entryTime": 2025-01-05T15:14:32.551Z,
      "id": "abbfc6e4-8c86-49d8-a74a-39e2820bb90c",
      "site": "light drab gym",
    },
    {
      "entryTime": 2025-01-02T18:40:40.479Z,
      "id": "94e1bf9f-3886-49ab-9c0f-e3f8f510af26",
      "site": "unruly angry suppression",
    },
    {
      "entryTime": 2024-12-27T12:10:23.550Z,
      "id": "0ff99a5d-ca17-46e7-8626-54066d815513",
      "site": "specific dead ramen",
    },
    {
      "entryTime": 2024-12-19T14:30:18.312Z,
      "id": "1f7c1d3c-9eb9-4c8e-9f6c-41b1ac2ccb00",
      "site": "grounded lost vendor",
    },
    {
      "entryTime": 2024-12-07T20:20:41.125Z,
      "id": "545adc7a-40bb-46dd-ade4-456d42b3cec5",
      "site": "visible friendly nonconformist",
    },
    {
      "entryTime": 2024-12-01T20:42:23.632Z,
      "id": "6b70c8ff-7fd8-4584-9ce0-33c0b2d400d8",
      "site": "concerned specific printing",
    },
    {
      "entryTime": 2024-11-29T23:46:01.845Z,
      "id": "3701a341-01db-4f8d-bf33-cc6dbf159d9a",
      "site": "ideal blond spume",
    },
    {
      "entryTime": 2024-11-28T12:28:08.877Z,
      "id": "a48d34a0-e5da-443c-a162-104a0f3f22a3",
      "site": "second pleasing berry",
    },
    {
      "entryTime": 2024-11-27T13:08:20.671Z,
      "id": "1301961d-03d7-4389-a74b-b217c152c4cd",
      "site": "alert awesome intuition",
    },
    {
      "entryTime": 2024-11-21T18:32:40.014Z,
      "id": "6f631fe9-5b7b-487d-9bf8-baa24b9f4c58",
      "site": "upbeat key cheek",
    },
    {
      "entryTime": 2024-11-20T11:55:30.009Z,
      "id": "89b41f9c-3a8d-45fd-b31c-e7b45351393b",
      "site": "substantial bruised chinchilla",
    },
    {
      "entryTime": 2024-11-18T21:50:53.218Z,
      "id": "2b149735-8052-4827-bb6b-679e9249d5cf",
      "site": "mild mixed crewman",
    },
    {
      "entryTime": 2024-11-17T05:14:59.683Z,
      "id": "98323c28-9b12-43f2-adad-64c9c1183f02",
      "site": "jumpy canine antechamber",
    },
    {
      "entryTime": 2024-11-16T14:55:11.222Z,
      "id": "8694aeee-dcee-4f0d-bb09-b092b492a691",
      "site": "ringed regal temporary",
    },
  ],
  "totalCount": 138,
}
`;

exports[`Log entries service when listing log entries will perform a search for log entries before an end date 1`] = `
{
  "data": [
    {
      "entryTime": 2023-09-30T04:44:16.141Z,
      "id": "a520b5da-51ad-42b6-b4e5-63ba0d35bc18",
      "site": "frequent realistic paramedic",
    },
    {
      "entryTime": 2023-09-28T06:15:48.042Z,
      "id": "b7e6f2bc-59fb-449f-b51f-05c65dd3cbb4",
      "site": "remorseful selfish recommendation",
    },
    {
      "entryTime": 2023-09-22T17:23:37.772Z,
      "id": "9304afeb-8947-4892-a0be-e20514afca98",
      "site": "beloved difficult attack",
    },
    {
      "entryTime": 2023-09-21T10:04:24.179Z,
      "id": "8b5e5d03-9ab1-47c5-88ad-837130fafd46",
      "site": "cultured illiterate acid",
    },
    {
      "entryTime": 2023-09-16T04:13:47.827Z,
      "id": "c3f8969c-f4b1-4501-82e7-eb2c782701a7",
      "site": "reckless scornful transom",
    },
    {
      "entryTime": 2023-09-15T02:49:45.466Z,
      "id": "33954acc-3e27-4cdf-9729-0e3755b4284c",
      "site": "safe welcome designation",
    },
    {
      "entryTime": 2023-09-12T21:57:23.727Z,
      "id": "f98f941c-bca4-4680-963e-537fe767b41e",
      "site": "whirlwind measly subset",
    },
    {
      "entryTime": 2023-09-10T22:13:52.911Z,
      "id": "4303fb6e-1596-4d18-a806-ce3f37b6151b",
      "site": "fluffy pricey tool",
    },
    {
      "entryTime": 2023-09-10T07:38:58.554Z,
      "id": "834540a4-bc8e-4cc7-976e-fef0054cf03c",
      "site": "untrue sparse comics",
    },
    {
      "entryTime": 2023-09-06T00:27:35.493Z,
      "id": "d380f237-307f-491b-8329-0f6b9a2220d7",
      "site": "snarling round astrolabe",
    },
    {
      "entryTime": 2023-08-28T07:35:59.250Z,
      "id": "8d4659f2-40ae-489b-bb81-05e0102a8fcf",
      "site": "utter extraneous calm",
    },
    {
      "entryTime": 2023-08-25T17:20:39.433Z,
      "id": "812af1cc-e40c-4096-8678-23190ebf055b",
      "site": "apt pastel moai",
    },
    {
      "entryTime": 2023-08-23T12:04:46.098Z,
      "id": "357e80c5-f242-459d-bf06-a9bb849d860a",
      "site": "rosy slow hiking",
    },
    {
      "entryTime": 2023-08-19T22:42:06.006Z,
      "id": "cd44e36d-7b86-4783-bff2-bdcd9634dfa7",
      "site": "lost profuse garlic",
    },
    {
      "entryTime": 2023-08-15T13:16:30.941Z,
      "id": "3207ada6-eadc-4d3a-97cc-aae5d9e5e463",
      "site": "spotless gifted gallon",
    },
  ],
  "totalCount": 172,
}
`;

exports[`Log entries service when listing log entries will perform a search for log entries belonging to a specific diver 1`] = `
{
  "data": [
    {
      "entryTime": 2025-01-07T05:08:39.483Z,
      "id": "a3ac30e7-fa6d-42f9-aa6e-bd017d68fd5b",
      "owner": "Ayla.Rippin",
      "site": "well-worn upbeat trillion",
    },
    {
      "entryTime": 2024-12-27T12:10:23.550Z,
      "id": "0ff99a5d-ca17-46e7-8626-54066d815513",
      "owner": "Ayla.Rippin",
      "site": "specific dead ramen",
    },
    {
      "entryTime": 2024-11-29T23:46:01.845Z,
      "id": "3701a341-01db-4f8d-bf33-cc6dbf159d9a",
      "owner": "Ayla.Rippin",
      "site": "ideal blond spume",
    },
    {
      "entryTime": 2024-11-27T13:08:20.671Z,
      "id": "1301961d-03d7-4389-a74b-b217c152c4cd",
      "owner": "Ayla.Rippin",
      "site": "alert awesome intuition",
    },
    {
      "entryTime": 2024-11-16T14:55:11.222Z,
      "id": "8694aeee-dcee-4f0d-bb09-b092b492a691",
      "owner": "Ayla.Rippin",
      "site": "ringed regal temporary",
    },
    {
      "entryTime": 2024-11-16T05:32:47.115Z,
      "id": "3adbd60c-1784-42fe-af8c-f308067901e6",
      "owner": "Ayla.Rippin",
      "site": "exotic warmhearted aside",
    },
    {
      "entryTime": 2024-11-09T23:19:05.960Z,
      "id": "3c1dbe45-33f9-4de6-90f8-e63293459762",
      "owner": "Ayla.Rippin",
      "site": "shameful glorious noodles",
    },
    {
      "entryTime": 2024-11-04T07:51:05.195Z,
      "id": "5cf6e1a0-e823-4feb-ad1d-813e87ff99c3",
      "owner": "Ayla.Rippin",
      "site": "nifty idle roof",
    },
    {
      "entryTime": 2024-10-13T14:06:46.020Z,
      "id": "2cfc1d0e-4821-44fc-a6e2-ac8e74c7437c",
      "owner": "Ayla.Rippin",
      "site": "sympathetic mortified taxicab",
    },
    {
      "entryTime": 2024-10-01T06:22:04.851Z,
      "id": "d92a2a9f-9519-47f0-a2f7-390b5c355d38",
      "owner": "Ayla.Rippin",
      "site": "steep aromatic broccoli",
    },
    {
      "entryTime": 2024-09-11T19:34:01.344Z,
      "id": "3300a246-ed0d-4109-8248-ac4a63485c5d",
      "owner": "Ayla.Rippin",
      "site": "caring nutty grub",
    },
    {
      "entryTime": 2024-09-04T17:39:13.446Z,
      "id": "8a3ee274-c876-4aa4-9a4c-422c5dee04fc",
      "owner": "Ayla.Rippin",
      "site": "steel monthly hypothesis",
    },
    {
      "entryTime": 2024-09-01T19:05:48.759Z,
      "id": "944c0bb4-f554-4ca3-83bf-410284c8ce8c",
      "owner": "Ayla.Rippin",
      "site": "meaty weird good",
    },
    {
      "entryTime": 2024-08-17T08:39:15.035Z,
      "id": "f983cf3b-33e5-46f5-892d-45a730a94751",
      "owner": "Ayla.Rippin",
      "site": "squeaky scaly sled",
    },
    {
      "entryTime": 2024-08-05T05:36:22.903Z,
      "id": "0eb84b46-aa52-4084-b1d2-a21ee43767f2",
      "owner": "Ayla.Rippin",
      "site": "wry boring examiner",
    },
    {
      "entryTime": 2024-06-29T13:01:52.054Z,
      "id": "eeca0816-894a-471f-920c-ab26825af66b",
      "owner": "Ayla.Rippin",
      "site": "apt colossal initial",
    },
    {
      "entryTime": 2024-06-24T19:20:38.577Z,
      "id": "544573bf-8793-49c6-828c-b1d455b64b27",
      "owner": "Ayla.Rippin",
      "site": "remarkable unique shoelace",
    },
    {
      "entryTime": 2024-06-09T16:00:28.191Z,
      "id": "63ca720e-9aa9-4fe5-b453-796182098165",
      "owner": "Ayla.Rippin",
      "site": "simplistic key cupcake",
    },
    {
      "entryTime": 2024-06-06T00:30:25.989Z,
      "id": "142b11cc-4051-4fd7-b07e-92f5238c9b0a",
      "owner": "Ayla.Rippin",
      "site": "legal incomplete trachoma",
    },
    {
      "entryTime": 2024-04-18T10:16:47.984Z,
      "id": "999c08cc-24b6-4f06-8670-1bd537ba57b4",
      "owner": "Ayla.Rippin",
      "site": "exotic warmhearted aside",
    },
  ],
  "totalCount": 75,
}
`;

exports[`Log entries service when listing log entries will perform a search for log entries between a start date and end date 1`] = `
{
  "data": [
    {
      "entryTime": 2023-09-30T04:44:16.141Z,
      "id": "a520b5da-51ad-42b6-b4e5-63ba0d35bc18",
      "site": "frequent realistic paramedic",
    },
    {
      "entryTime": 2023-09-28T06:15:48.042Z,
      "id": "b7e6f2bc-59fb-449f-b51f-05c65dd3cbb4",
      "site": "remorseful selfish recommendation",
    },
    {
      "entryTime": 2023-09-22T17:23:37.772Z,
      "id": "9304afeb-8947-4892-a0be-e20514afca98",
      "site": "beloved difficult attack",
    },
    {
      "entryTime": 2023-09-21T10:04:24.179Z,
      "id": "8b5e5d03-9ab1-47c5-88ad-837130fafd46",
      "site": "cultured illiterate acid",
    },
    {
      "entryTime": 2023-09-16T04:13:47.827Z,
      "id": "c3f8969c-f4b1-4501-82e7-eb2c782701a7",
      "site": "reckless scornful transom",
    },
    {
      "entryTime": 2023-09-15T02:49:45.466Z,
      "id": "33954acc-3e27-4cdf-9729-0e3755b4284c",
      "site": "safe welcome designation",
    },
    {
      "entryTime": 2023-09-12T21:57:23.727Z,
      "id": "f98f941c-bca4-4680-963e-537fe767b41e",
      "site": "whirlwind measly subset",
    },
    {
      "entryTime": 2023-09-10T22:13:52.911Z,
      "id": "4303fb6e-1596-4d18-a806-ce3f37b6151b",
      "site": "fluffy pricey tool",
    },
    {
      "entryTime": 2023-09-10T07:38:58.554Z,
      "id": "834540a4-bc8e-4cc7-976e-fef0054cf03c",
      "site": "untrue sparse comics",
    },
    {
      "entryTime": 2023-09-06T00:27:35.493Z,
      "id": "d380f237-307f-491b-8329-0f6b9a2220d7",
      "site": "snarling round astrolabe",
    },
  ],
  "totalCount": 10,
}
`;

exports[`Log entries service when listing log entries will perform a search with pagination 1`] = `
{
  "data": [
    {
      "entryTime": 2024-07-02T05:40:26.382Z,
      "id": "bcdd5fa5-d641-4d1d-9357-a2da041ca105",
      "site": "short-term scratchy stucco",
    },
    {
      "entryTime": 2024-06-29T13:01:52.054Z,
      "id": "eeca0816-894a-471f-920c-ab26825af66b",
      "site": "apt colossal initial",
    },
    {
      "entryTime": 2024-06-27T12:35:13.596Z,
      "id": "63f20ecc-611a-490d-982e-e004a28f4fda",
      "site": "extra-small plain trader",
    },
    {
      "entryTime": 2024-06-25T10:47:41.149Z,
      "id": "a8ba8471-9ef9-4b80-a8c5-ceeaa2804d90",
      "site": "wiry linear guide",
    },
    {
      "entryTime": 2024-06-24T19:20:38.577Z,
      "id": "544573bf-8793-49c6-828c-b1d455b64b27",
      "site": "remarkable unique shoelace",
    },
    {
      "entryTime": 2024-06-24T11:55:16.443Z,
      "id": "29ace20e-764d-4450-a185-605059b56ec7",
      "site": "forceful beloved algorithm",
    },
    {
      "entryTime": 2024-06-24T03:22:25.162Z,
      "id": "092786cf-6fc9-4778-9a63-949735aa1ced",
      "site": "apt pastel moai",
    },
    {
      "entryTime": 2024-06-16T15:10:10.622Z,
      "id": "49c6a57f-f633-4f3c-ac19-6b912d8a0c5f",
      "site": "basic long-term coupon",
    },
    {
      "entryTime": 2024-06-09T16:00:28.191Z,
      "id": "63ca720e-9aa9-4fe5-b453-796182098165",
      "site": "simplistic key cupcake",
    },
    {
      "entryTime": 2024-06-08T13:27:58.041Z,
      "id": "4152101f-6f90-4efe-89da-8abb45602ef2",
      "site": "altruistic well-worn disconnection",
    },
  ],
  "total": 300,
}
`;

exports[`Log entries service when listing log entries will sort log entries by "entryTime" in "asc" order 1`] = `
[
  {
    "entryTime": 2022-01-16T05:53:31.706Z,
    "id": "8eb5bb9d-61c0-454f-a922-c85562525e9e",
    "site": "agitated high field",
  },
  {
    "entryTime": 2022-01-17T11:51:49.693Z,
    "id": "a1567fee-08ae-453b-b8b0-52dfce74cc5f",
    "site": "dazzling easy-going shortwave",
  },
  {
    "entryTime": 2022-01-18T11:17:06.392Z,
    "id": "cc45abba-d24e-4792-8a57-cb4ef1cd3751",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": 2022-01-19T14:03:50.562Z,
    "id": "33cd3f39-566e-4ac4-b4cd-f73791987f70",
    "site": "other necessary fedora",
  },
  {
    "entryTime": 2022-01-23T01:37:56.938Z,
    "id": "73ad3dfa-d27b-4f49-9be8-0bcda4241696",
    "site": "thoughtful lumpy quotation",
  },
  {
    "entryTime": 2022-01-25T09:43:28.117Z,
    "id": "e27e1f0c-fdb7-413d-835e-f4e81ec53dfc",
    "site": "spotless incomparable carnival",
  },
  {
    "entryTime": 2022-01-25T14:40:44.073Z,
    "id": "09b9299a-7c0d-4270-b842-bbd43d89cf67",
    "site": "impolite hungry hunt",
  },
  {
    "entryTime": 2022-01-29T15:23:22.602Z,
    "id": "05beb2bb-fccb-4c62-ba45-d4e822912b6e",
    "site": "petty every havoc",
  },
  {
    "entryTime": 2022-02-01T10:27:52.633Z,
    "id": "0dcb465b-cc7e-4202-8857-1a50f77260a6",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": 2022-02-04T19:23:18.616Z,
    "id": "e5ff5d74-7180-42dd-b829-e3729adfb70a",
    "site": "peaceful well-worn intention",
  },
]
`;

exports[`Log entries service when listing log entries will sort log entries by "entryTime" in "desc" order 1`] = `
[
  {
    "entryTime": 2025-01-07T05:08:39.483Z,
    "id": "a3ac30e7-fa6d-42f9-aa6e-bd017d68fd5b",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": 2025-01-05T15:14:32.551Z,
    "id": "abbfc6e4-8c86-49d8-a74a-39e2820bb90c",
    "site": "light drab gym",
  },
  {
    "entryTime": 2025-01-02T18:40:40.479Z,
    "id": "94e1bf9f-3886-49ab-9c0f-e3f8f510af26",
    "site": "unruly angry suppression",
  },
  {
    "entryTime": 2024-12-27T12:10:23.550Z,
    "id": "0ff99a5d-ca17-46e7-8626-54066d815513",
    "site": "specific dead ramen",
  },
  {
    "entryTime": 2024-12-19T14:30:18.312Z,
    "id": "1f7c1d3c-9eb9-4c8e-9f6c-41b1ac2ccb00",
    "site": "grounded lost vendor",
  },
  {
    "entryTime": 2024-12-07T20:20:41.125Z,
    "id": "545adc7a-40bb-46dd-ade4-456d42b3cec5",
    "site": "visible friendly nonconformist",
  },
  {
    "entryTime": 2024-12-01T20:42:23.632Z,
    "id": "6b70c8ff-7fd8-4584-9ce0-33c0b2d400d8",
    "site": "concerned specific printing",
  },
  {
    "entryTime": 2024-11-29T23:46:01.845Z,
    "id": "3701a341-01db-4f8d-bf33-cc6dbf159d9a",
    "site": "ideal blond spume",
  },
  {
    "entryTime": 2024-11-28T12:28:08.877Z,
    "id": "a48d34a0-e5da-443c-a162-104a0f3f22a3",
    "site": "second pleasing berry",
  },
  {
    "entryTime": 2024-11-27T13:08:20.671Z,
    "id": "1301961d-03d7-4389-a74b-b217c152c4cd",
    "site": "alert awesome intuition",
  },
]
`;

exports[`Log entries service when listing recent dive sites will return a distinct list of the most recently used dive sites 1`] = `
[
  {
    "id": "5b125836-5b5b-4ccc-a56e-58891f8bebfc",
    "name": "alert awesome intuition",
  },
  {
    "id": "f2026af7-0f73-4fc0-b29b-491dc2846842",
    "name": "caring nutty grub",
  },
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "7737963a-bf8b-44ee-955f-066a098ef80b",
    "name": "ideal blond spume",
  },
  {
    "id": "5e67eec8-fc13-4059-ab81-83b91be3c4fd",
    "name": "nifty idle roof",
  },
  {
    "id": "3f760648-6dd0-4fa9-a023-7bc393a1ac44",
    "name": "ringed regal temporary",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "3b9bdf22-0b5b-4f6b-9ec4-f5dfdb0bebe1",
    "name": "specific dead ramen",
  },
  {
    "id": "22db73ff-3551-4abe-953d-8ee80d9b6237",
    "name": "steel monthly hypothesis",
  },
  {
    "id": "60c05ea8-b642-48cf-a2f3-39e7eb2bc8b5",
    "name": "steep aromatic broccoli",
  },
  {
    "id": "a078a554-1a01-4ca3-8d3a-682f1c23e64d",
    "name": "sympathetic mortified taxicab",
  },
  {
    "id": "ed537618-c11d-468c-9e88-867c288e649f",
    "name": "well-worn upbeat trillion",
  },
]
`;

exports[`Log entries service when listing recent operators will return a distinct list of the most recently used operators 1`] = `
[
  {
    "id": "5c3619d6-2b6b-468a-b1cc-79c464303e24",
    "name": "annual, crowded editor",
  },
  {
    "id": "c8570f93-cc7f-48e8-9168-fac339134cb8",
    "name": "clear-cut, shady bend",
  },
  {
    "id": "5d34fe9f-e726-4f4f-a0fe-601e60fc9a0d",
    "name": "direct, lustrous slang",
  },
  {
    "id": "0a0a9dcd-2440-43e8-8aa2-2976522b3950",
    "name": "flustered, thunderous charity",
  },
  {
    "id": "b7384c5c-9592-4060-a069-6f102fd76312",
    "name": "necessary, trivial savory",
  },
  {
    "id": "e1282190-0709-4af9-a8b5-043330b342db",
    "name": "opulent, wilted wheel",
  },
  {
    "id": "5b8b9f97-3b8f-4510-a75f-c4ac682ca555",
    "name": "passionate, attractive checkroom",
  },
  {
    "id": "fc34db05-badf-4171-a772-94111ff73add",
    "name": "poised, few fertilizer",
  },
  {
    "id": "c2f48c4e-cc27-4099-bd0c-00e9d43fc222",
    "name": "shabby, handsome north",
  },
  {
    "id": "aad3e262-0f18-4a6a-bfa5-e6ec25f1779d",
    "name": "silent, blind rank",
  },
  {
    "id": "ffb23adb-11b2-4507-9fb7-58df5b677846",
    "name": "sophisticated, tart bull-fighter",
  },
  {
    "id": "7c6ea32d-a9a7-4766-bfcc-8acd7b6d6dfd",
    "name": "usable, fragrant snorer",
  },
]
`;

exports[`Log entries service when retrieving a single log entry will retrieve a log entry belonging to a specific user 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1300,
      "hePercent": undefined,
      "material": "fe",
      "name": "low story-telling",
      "o2Percent": undefined,
      "pressureUnit": "psi",
      "startPressure": 2910,
      "volume": 18,
      "workingPressure": 237,
    },
  ],
  "conditions": {
    "airTemperature": 66,
    "bottomTemperature": 91.1,
    "chop": 3.2,
    "current": 3.1,
    "surfaceTemperature": 45,
    "temperatureUnit": "F",
    "visibility": 3.4,
    "weather": "partly cloudy",
  },
  "createdAt": 2023-02-15T01:23:32.000Z,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
    "location": "Cape Coral",
    "logBookSharing": "private",
    "memberSince": 1648492241189,
    "name": "Johnnie Abernathy",
    "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
    "username": "Reina54",
  },
  "depths": {
    "averageDepth": 47.04,
    "depthUnit": "ft",
    "maxDepth": 58.8,
  },
  "equipment": {
    "boots": undefined,
    "camera": undefined,
    "exposureSuit": undefined,
    "gloves": undefined,
    "hood": true,
    "scooter": undefined,
    "torch": false,
    "trimCorrectness": "good",
    "weight": 9.2,
    "weightCorrectness": undefined,
    "weightUnit": "kg",
  },
  "id": "2797daf6-52e2-4786-bcd7-971a87468563",
  "logNumber": 193,
  "notes": "Cauda rem cerno caste theatrum. Verecundia itaque admoveo. Spectaculum minus facere torrens.",
  "operator": {
    "address": "540 Sandringham Road Apt. 988, Creolachester, NE, 47119",
    "averageRating": undefined,
    "description": "Tepidus caritas aiunt quis. Vociferor cotidie aliqua collum adnuo bonus admitto argentum defetiscor. Audax caput valens debilito coruscus adipiscor verumtamen.
Accusantium tollo casso excepturi verumtamen reprehenderit commodi abundans. Assumenda aeneus decens cogo auditor vulgaris excepturi spargo. Terra curo cicuta stillicidium acies antea.",
    "gps": {
      "lat": 77.2672,
      "lon": -119.1238,
    },
    "id": "65704209-2883-4851-be84-78a6b95b9ad3",
    "logo": "https://loremflickr.com/128/128?lock=6087808152240128",
    "name": "miniature, unlawful hydrocarbon",
    "phone": "1-226-591-0255",
    "slug": "miniature-unlawful-hydrocarbon",
    "website": "https://exhausted-milepost.biz",
  },
  "site": {
    "averageRating": 1.48,
    "depth": {
      "depth": 10.58,
      "unit": "ft",
    },
    "description": "Adipiscor verus theologus chirographum cimentarius benigne tamquam occaecati corona. Tam verbum audacia. Aureus tolero acerbitas virgo impedit.",
    "gps": {
      "lat": -2.7163,
      "lon": -96.1687,
    },
    "id": "791f3ca0-30b6-4637-b7a5-c2374515f2b3",
    "location": "Redlands",
    "name": "untrue sparse comics",
  },
  "tags": [],
  "timing": {
    "bottomTime": 3021,
    "duration": 3324,
    "entryTime": 1656290866796,
    "surfaceInterval": undefined,
    "timezone": "Asia/Atyrau",
  },
  "updatedAt": undefined,
}
`;

exports[`Log entries service when retrieving a single log entry will return the requested log entry 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1300,
      "hePercent": undefined,
      "material": "fe",
      "name": "low story-telling",
      "o2Percent": undefined,
      "pressureUnit": "psi",
      "startPressure": 2910,
      "volume": 18,
      "workingPressure": 237,
    },
  ],
  "conditions": {
    "airTemperature": 66,
    "bottomTemperature": 91.1,
    "chop": 3.2,
    "current": 3.1,
    "surfaceTemperature": 45,
    "temperatureUnit": "F",
    "visibility": 3.4,
    "weather": "partly cloudy",
  },
  "createdAt": 2023-02-15T01:23:32.000Z,
  "creator": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/725.jpg",
    "location": "Cape Coral",
    "logBookSharing": "private",
    "memberSince": 1648492241189,
    "name": "Johnnie Abernathy",
    "userId": "e0a5fab0-9484-4f54-a128-21d73552b08a",
    "username": "Reina54",
  },
  "depths": {
    "averageDepth": 47.04,
    "depthUnit": "ft",
    "maxDepth": 58.8,
  },
  "equipment": {
    "boots": undefined,
    "camera": undefined,
    "exposureSuit": undefined,
    "gloves": undefined,
    "hood": true,
    "scooter": undefined,
    "torch": false,
    "trimCorrectness": "good",
    "weight": 9.2,
    "weightCorrectness": undefined,
    "weightUnit": "kg",
  },
  "id": "2797daf6-52e2-4786-bcd7-971a87468563",
  "logNumber": 193,
  "notes": "Cauda rem cerno caste theatrum. Verecundia itaque admoveo. Spectaculum minus facere torrens.",
  "operator": {
    "address": "540 Sandringham Road Apt. 988, Creolachester, NE, 47119",
    "averageRating": undefined,
    "description": "Tepidus caritas aiunt quis. Vociferor cotidie aliqua collum adnuo bonus admitto argentum defetiscor. Audax caput valens debilito coruscus adipiscor verumtamen.
Accusantium tollo casso excepturi verumtamen reprehenderit commodi abundans. Assumenda aeneus decens cogo auditor vulgaris excepturi spargo. Terra curo cicuta stillicidium acies antea.",
    "gps": {
      "lat": 77.2672,
      "lon": -119.1238,
    },
    "id": "65704209-2883-4851-be84-78a6b95b9ad3",
    "logo": "https://loremflickr.com/128/128?lock=6087808152240128",
    "name": "miniature, unlawful hydrocarbon",
    "phone": "1-226-591-0255",
    "slug": "miniature-unlawful-hydrocarbon",
    "website": "https://exhausted-milepost.biz",
  },
  "site": {
    "averageRating": 1.48,
    "depth": {
      "depth": 10.58,
      "unit": "ft",
    },
    "description": "Adipiscor verus theologus chirographum cimentarius benigne tamquam occaecati corona. Tam verbum audacia. Aureus tolero acerbitas virgo impedit.",
    "gps": {
      "lat": -2.7163,
      "lon": -96.1687,
    },
    "id": "791f3ca0-30b6-4637-b7a5-c2374515f2b3",
    "location": "Redlands",
    "name": "untrue sparse comics",
  },
  "tags": [],
  "timing": {
    "bottomTime": 3021,
    "duration": 3324,
    "entryTime": 1656290866796,
    "surfaceInterval": undefined,
    "timezone": "Asia/Atyrau",
  },
  "updatedAt": undefined,
}
`;
